--- a/renewables_europe_consumption.ipynb
+++ b/renewables_europe_consumption.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "2004  KTOE    0000  B_100900  AL  2212.4"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "       '7200'], dtype=object)"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "4  2004  KTOE    0000  B_100900  AL  2212.4  000  00"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "4  2004  KTOE    0000  B_100900  AL  2212.4  000  00       00"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "6       60    -3.6"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -616,10 +616,10 @@
        }
       },
       "text/html": [
-       "<div id=\"cd4356c0-5991-4a6c-8556-28247e236d06\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cd4356c0-5991-4a6c-8556-28247e236d06\", [{\"labels\": [\"Solid fuels\", \"Total petroleum\", \"Gas\", \"Nuclear\", \"Other\", \"RES\", \"Electric energy\", \"Other\"], \"values\": [50.7, 1233.7, 35.0, 0.0, 0.0, 951.5, -3.6, 0.0], \"type\": \"pie\", \"hoverinfo\": \"label+percent\", \"hole\": 0.4}], {\"title\": \"Gross inland consumption in AL, 2016\"}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"266aeefa-ef0e-4aec-9f7c-a51d24e61b66\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"266aeefa-ef0e-4aec-9f7c-a51d24e61b66\", [{\"labels\": [\"Solid fuels\", \"Total petroleum\", \"Gas\", \"Nuclear\", \"Other\", \"RES\", \"Electric energy\", \"Other\"], \"values\": [50.7, 1233.7, 35.0, 0.0, 0.0, 951.5, -3.6, 0.0], \"type\": \"pie\", \"hoverinfo\": \"label+percent\", \"hole\": 0.4}], {\"title\": \"Gross inland consumption in AL, 2016\"}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"cd4356c0-5991-4a6c-8556-28247e236d06\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cd4356c0-5991-4a6c-8556-28247e236d06\", [{\"labels\": [\"Solid fuels\", \"Total petroleum\", \"Gas\", \"Nuclear\", \"Other\", \"RES\", \"Electric energy\", \"Other\"], \"values\": [50.7, 1233.7, 35.0, 0.0, 0.0, 951.5, -3.6, 0.0], \"type\": \"pie\", \"hoverinfo\": \"label+percent\", \"hole\": 0.4}], {\"title\": \"Gross inland consumption in AL, 2016\"}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"266aeefa-ef0e-4aec-9f7c-a51d24e61b66\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"266aeefa-ef0e-4aec-9f7c-a51d24e61b66\", [{\"labels\": [\"Solid fuels\", \"Total petroleum\", \"Gas\", \"Nuclear\", \"Other\", \"RES\", \"Electric energy\", \"Other\"], \"values\": [50.7, 1233.7, 35.0, 0.0, 0.0, 951.5, -3.6, 0.0], \"type\": \"pie\", \"hoverinfo\": \"label+percent\", \"hole\": 0.4}], {\"title\": \"Gross inland consumption in AL, 2016\"}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "4  2004  KTOE    5500  B_100900  AL  704.3"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
        "9     555    0.0"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -953,16 +953,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>50.7</td>\n",
-       "      <td>Solid fuels</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30</td>\n",
        "      <td>1233.7</td>\n",
        "      <td>Total petroleum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>550</td>\n",
+       "      <td>951.5</td>\n",
+       "      <td>RES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20</td>\n",
+       "      <td>50.7</td>\n",
+       "      <td>Solid fuels</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -983,10 +989,10 @@
        "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>550</td>\n",
-       "      <td>951.5</td>\n",
-       "      <td>RES</td>\n",
+       "      <th>7</th>\n",
+       "      <td>72</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -994,40 +1000,34 @@
        "      <td>-3.6</td>\n",
        "      <td>Electric energy</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>72</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Other</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "  category   total               cn\n",
-       "0       20    50.7      Solid fuels\n",
        "1       30  1233.7  Total petroleum\n",
+       "5      550   951.5              RES\n",
+       "0       20    50.7      Solid fuels\n",
        "2       40    35.0              Gas\n",
        "3       51     0.0          Nuclear\n",
        "4       52     0.0            Other\n",
-       "5      550   951.5              RES\n",
-       "6       60    -3.6  Electric energy\n",
-       "7       72     0.0            Other"
+       "7       72     0.0            Other\n",
+       "6       60    -3.6  Electric energy"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pie_data"
+    "pie_data.sort_values(by=['total'],ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
        "4    5541  187.8  Solid biofuels (excl charcoal)"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,11 +1136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# final_data = (pie_data >> drop('category') >> mutate(RES = False))[pie_data['cn'] != 'RES'].append((pie_data_RES >> mutate(RES = True) >> drop('product')))\n",
+    "final_data = (pie_data >> drop('category') >> mutate(RES = False))[pie_data['cn'] != 'RES'].append((pie_data_RES >> mutate(RES = True) >> drop('product')))\n",
     "\n",
     "final_data_a = (final_data >> \n",
     " mutate(sh = X.total / X.total.sum()) >> \n",
@@ -1149,12 +1149,118 @@
     "\n",
     "final_data_a.loc[final_data_a['cn'] == 'Other','oth'] = True\n",
     "final_data_a.loc[(final_data_a['RES'] == True) & (final_data_a['oth'] == True),'cn'] = 'Other RES'\n",
-    "final_data_a.loc[(final_data_a['RES'] == False) & (final_data_a['oth'] == True),'cn'] = 'Other Non-RES'"
+    "final_data_a.loc[(final_data_a['RES'] == False) & (final_data_a['oth'] == True),'cn'] = 'Other Non-RES'\n",
+    "final_data_a = (final_data_a >> group_by('cn') >> summarize(total = X.total.sum(), sh = X.sh.sum()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cn</th>\n",
+       "      <th>sh</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Total petroleum</td>\n",
+       "      <td>0.544103</td>\n",
+       "      <td>1233.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hydro</td>\n",
+       "      <td>0.295096</td>\n",
+       "      <td>669.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Solid biofuels (excl charcoal)</td>\n",
+       "      <td>0.082826</td>\n",
+       "      <td>187.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Liquid biofuels</td>\n",
+       "      <td>0.036121</td>\n",
+       "      <td>81.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Solid fuels</td>\n",
+       "      <td>0.022360</td>\n",
+       "      <td>50.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gas</td>\n",
+       "      <td>0.015436</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Other RES</td>\n",
+       "      <td>0.005645</td>\n",
+       "      <td>12.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Other Non-RES</td>\n",
+       "      <td>-0.001588</td>\n",
+       "      <td>-3.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               cn        sh   total\n",
+       "7                 Total petroleum  0.544103  1233.7\n",
+       "1                           Hydro  0.295096   669.1\n",
+       "5  Solid biofuels (excl charcoal)  0.082826   187.8\n",
+       "2                 Liquid biofuels  0.036121    81.9\n",
+       "6                     Solid fuels  0.022360    50.7\n",
+       "0                             Gas  0.015436    35.0\n",
+       "4                       Other RES  0.005645    12.8\n",
+       "3                   Other Non-RES -0.001588    -3.6"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_data_a.sort_values(by=['total'],ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -1165,43 +1271,25 @@
          "hole": 0.4,
          "hoverinfo": "label+percent",
          "labels": [
-          "Solid fuels",
-          "Total petroleum",
           "Gas",
-          "Nuclear",
+          "Hydro",
+          "Liquid biofuels",
           "Other Non-RES",
-          "Electric energy",
-          "Other Non-RES",
-          "Other RES",
-          "Other RES",
-          "Other RES",
           "Other RES",
           "Solid biofuels (excl charcoal)",
-          "Other RES",
-          "Other RES",
-          "Other RES",
-          "Other RES",
-          "Other RES"
+          "Solid fuels",
+          "Total petroleum"
          ],
          "type": "pie",
          "values": [
-          2259.5,
-          7005.9,
-          8027.7,
-          4161.4,
-          0,
-          1092.9,
-          157.2,
-          22.3,
-          58.8,
-          28.5,
-          0,
-          2410.4,
-          88.6,
-          83.2,
-          0,
-          188.5,
-          119.9
+          35,
+          669.1,
+          81.9,
+          -3.6,
+          12.8,
+          187.8,
+          50.7,
+          1233.7
          ]
         }
        ],
@@ -1210,10 +1298,10 @@
        }
       },
       "text/html": [
-       "<div id=\"2e4ad638-60ba-41be-b688-3070134aa977\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2e4ad638-60ba-41be-b688-3070134aa977\", [{\"labels\": [\"Solid fuels\", \"Total petroleum\", \"Gas\", \"Nuclear\", \"Other Non-RES\", \"Electric energy\", \"Other Non-RES\", \"Other RES\", \"Other RES\", \"Other RES\", \"Other RES\", \"Solid biofuels (excl charcoal)\", \"Other RES\", \"Other RES\", \"Other RES\", \"Other RES\", \"Other RES\"], \"values\": [2259.5, 7005.9, 8027.7, 4161.4, 0.0, 1092.9, 157.2, 22.3, 58.8, 28.5, 0.0, 2410.4, 88.6, 83.2, 0.0, 188.5, 119.9], \"type\": \"pie\", \"hoverinfo\": \"label+percent\", \"hole\": 0.4}], {\"title\": \"Gross inland consumption in AL, 2016\"}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"616dd41a-7daf-4c4a-8530-778e6165dc13\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"616dd41a-7daf-4c4a-8530-778e6165dc13\", [{\"labels\": [\"Gas\", \"Hydro\", \"Liquid biofuels\", \"Other Non-RES\", \"Other RES\", \"Solid biofuels (excl charcoal)\", \"Solid fuels\", \"Total petroleum\"], \"values\": [35.0, 669.1, 81.9, -3.6, 12.8, 187.8, 50.7, 1233.7], \"type\": \"pie\", \"hoverinfo\": \"label+percent\", \"hole\": 0.4}], {\"title\": \"Gross inland consumption in AL, 2016\"}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"2e4ad638-60ba-41be-b688-3070134aa977\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2e4ad638-60ba-41be-b688-3070134aa977\", [{\"labels\": [\"Solid fuels\", \"Total petroleum\", \"Gas\", \"Nuclear\", \"Other Non-RES\", \"Electric energy\", \"Other Non-RES\", \"Other RES\", \"Other RES\", \"Other RES\", \"Other RES\", \"Solid biofuels (excl charcoal)\", \"Other RES\", \"Other RES\", \"Other RES\", \"Other RES\", \"Other RES\"], \"values\": [2259.5, 7005.9, 8027.7, 4161.4, 0.0, 1092.9, 157.2, 22.3, 58.8, 28.5, 0.0, 2410.4, 88.6, 83.2, 0.0, 188.5, 119.9], \"type\": \"pie\", \"hoverinfo\": \"label+percent\", \"hole\": 0.4}], {\"title\": \"Gross inland consumption in AL, 2016\"}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"616dd41a-7daf-4c4a-8530-778e6165dc13\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"616dd41a-7daf-4c4a-8530-778e6165dc13\", [{\"labels\": [\"Gas\", \"Hydro\", \"Liquid biofuels\", \"Other Non-RES\", \"Other RES\", \"Solid biofuels (excl charcoal)\", \"Solid fuels\", \"Total petroleum\"], \"values\": [35.0, 669.1, 81.9, -3.6, 12.8, 187.8, 50.7, 1233.7], \"type\": \"pie\", \"hoverinfo\": \"label+percent\", \"hole\": 0.4}], {\"title\": \"Gross inland consumption in AL, 2016\"}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
